# STM32-Miosix-GameOfLife

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  GameOfLife.cpp  GameOfLife.h  Makefile  MyInput.cpp  MyInput.h  Prompt.cpp  README.md  Terminal.cpp  Terminal.h  base_input_handler.cpp  board_settings.h  input_handler.cpp  input_handler.h  main.cpp  my_input.cpp  my_input.h  ncurses.cpp  notes.txt  starter.cpp  test1.cpp
includes/: Controller.h  GameOfLife.h  Prompt.h
project_report/: report.tex
src/: Controller.cpp  GameOfLife.cpp  Prompt.cpp  Terminal.cpp
